<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/black"
    tools:context="com.honestmc.ems.View.Activity.LaunchActivity">


    <LinearLayout
        android:id="@+id/launch_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="0.6"
            android:padding="4dp"
            android:src="@drawable/honestmclogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="#8b7347"
            android:orientation="vertical"
            android:visibility="visible">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2.7"
                android:background="#8b7347"
               />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="#8b7347"
                android:src="@drawable/emslogo"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#8b7347"
                android:gravity="center"
                android:text="@string/ERCP"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:typeface="serif" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="20dp"
            android:visibility="visible">

            <EditText
                android:id="@+id/hospital_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:drawableRight="@drawable/ic_baseline_local_hospital_24"
                android:ems="10"
                android:hint="@string/Hospital"
                android:inputType="text"
                android:textSize="23dp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="20dp"
            android:visibility="visible">

            <EditText
                android:id="@+id/section_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:drawableRight="@drawable/ic_baseline_medical_services_24"
                android:ems="10"
                android:hint="@string/Section"
                android:inputType="text"
                android:textSize="23dp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="20dp"
            android:visibility="visible">

            <EditText
                android:id="@+id/job_number_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:drawableRight="@drawable/ic_baseline_dvr_24"
                android:ems="10"
                android:hint="@string/Job_Number"
                android:inputType="text"
                android:textSize="23dp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="20dp"
            android:visibility="visible">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:drawableRight="@drawable/ic_baseline_person_24"
                android:ems="10"
                android:hint="@string/Name"
                android:inputType="text"
                android:textSize="23dp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">



            <Button
                android:id="@+id/browse_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_shape"
                android:text="@string/Browse"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:textStyle="bold"
                android:typeface="serif" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
            <Button
                android:id="@+id/start_ems_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_shape"
                android:text="@string/Sure"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>